--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
@@ -22,6 +22,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.468.0",
@@ -29,11 +30,13 @@
     "next-sanity": "^9.8.35",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "sanity": "^3.70.0",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
